--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 #colorOne {
   background-color: black;
 }
-/*#colorTwo {
+#colorTwo {
   background-color: #dc143c;
 }
 #colorThree {
@@ -16,4 +16,3 @@
 #colorFour {
   background-color: #ffdab9;
 }
-*/
