--- a/style.css
+++ b/style.css
@@ -17,9 +17,22 @@
   background-color: #ffdab9;
 }
 
-#pixel {
+.pixel {
   border: solid 1px black;
-  display: inline-block;
   width: 40px;
   height: 40px;
+  margin: 0.5px;
+}
+
+#pixel-board {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  width: 210px;
+  height: 210px;
+}
+
+#color-palette {
+  height: auto;
+  border: solid 1px red;
 }
